# BAMCPP

./: CMakeLists.txt  README.md
cmake/: FindBAM.cmake  FindBAMJL.cmake
include/: BAM.hh  decl.h
src/: BAM.cc
test/: CMakeLists.txt
test/include/: test.hh
test/src/: 3DIC_case.cc  test.cc
